# IntelSurvIdSecCamp

./: .~lock.report.docx#  README.md  dominant_color.py  main.py  pyproject.toml  train.ipynb
runs/detect/train/: args.yaml  results.csv
templates/: index.html
tmp/: dominant_color.py  index.html  live.py  main.py
